feat: add test descriptions
Added test descriptions to each test, describing exactly what it's
testing. Also moved test data to a new package/files. So the test
function are much easier to follow.
