# src/server/routes.go
@@ -35,6 +35,7 @@ func NewRouter() (*fizz.Fizz, error) {
 	fizzApp.GET("/openapi.json", nil, fizzApp.OpenAPI(infos, "json"))
 
 	gameRoutes(fizzApp.Group("/game", "game", "Related to managing the game types."))
+	questionRoutes(fizzApp.Group("/game", "question", "Related to managing the questions to a game type."))
 
 	if len(fizzApp.Errors()) != 0 {
 		return nil, fmt.Errorf("fizz errors: %v", fizzApp.Errors())
@@ -70,6 +71,10 @@ func gameRoutes(grp *fizz.RouterGroup) {
 		fizz.Response(fmt.Sprint(http.StatusConflict), "Already disabled", nil, nil),
 		fizz.Summary("Disables a game type."),
 	}, tonic.Handler(controllers.DisableGameType, http.StatusOK))
+	tonic.SetErrorHook(errHook)
+}
+
+func questionRoutes(grp *fizz.RouterGroup) {
 	grp.POST("/:name/question", []fizz.OperationOption{
 		fizz.Summary("Add a new question to a game type."),
 		fizz.Response(fmt.Sprint(http.StatusBadRequest), "Bad request", nil, nil),
